# syncer

./: .env  .gitignore  pyproject.toml  song_synced_lyrics_feasibility_research_brief.txt
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-ml-imports.txt  task-1-normalize-tests.txt  task-1-regression.txt  task-1-smoke-pipeline.json  task-10-cache-clear.txt  task-10-pipeline.txt  task-11-api.txt  task-12-cli.txt  task-13-e2e-tests.txt  task-2-models-test.txt  task-2-tests.txt  task-3-config-tests.txt  task-3-lrclib-test.txt  task-4-spotify-test.txt  task-5-ctc-tests.txt  task-5-youtube-test.txt  task-6-cache-test.txt  task-6-smoke-result.json  task-6-smoke-test-run.txt  task-7-pipeline-tests.txt  task-7-vocal-separation.txt  task-8-deletions.txt  task-8-word-alignment.txt  task-9-all-tests.txt  task-9-snap-alignment.txt
.sisyphus/evidence/final-qa/: song1-rick-astley.json  song2-no-lyrics.json  song3-hindi.json  summary.txt
.sisyphus/notepads/pipeline-refactor/: issues.md  learnings.md
.sisyphus/notepads/syncer-mvp/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: hindi-language-param.md  pipeline-refactor.md  syncer-mvp.md
scripts/: clear_cache.py
src/syncer/: __main__.py  api.py  cache.py  config.py  models.py  pipeline.py
src/syncer/alignment/: snap.py  (+5 more)
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_ctc_aligner.py  test_ctc_smoke.py  test_demucs.py  test_e2e.py  test_lrclib.py  test_models.py  test_pipeline.py  test_smoke.py  test_snap.py  test_spotify.py  test_text_normalize.py  test_whisperx_aligner.py  test_youtube.py
(+4 files in other folders)
